<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.Lama591divine</groupId>
    <artifactId>AtmSystem</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.5</version>
        <relativePath/>
    </parent>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.github.Lama591divine</groupId>
                <artifactId>Model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.Lama591divine</groupId>
                <artifactId>DAO</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.Lama591divine</groupId>
                <artifactId>Service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.Lama591divine</groupId>
                <artifactId>Controller</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>mainProgram/Model</module>
        <module>mainProgram/DAO</module>
        <module>mainProgram/Service</module>
        <module>mainProgram/Controller</module>
        <module>mainProgram/Application</module>
        <module>ApiGateway</module>
        <module>ApiGateway</module>
        <module>ApiGateway/SecurityController</module>
        <module>ApiGateway/SecurityDao</module>
        <module>ApiGateway/SecurityModel</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <id>generate-html-javadoc</id>
                        <phase>package</phase>
                        <goals><goal>javadoc</goal></goals>
                    </execution>
                    <execution>
                        <id>generate-javadoc-jar</id>
                        <goals><goal>jar</goal></goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.12.1</version>
            </plugin>
        </plugins>
    </build>
</project>
